# Human_Fall_Detection_Robot

./: .gitignore  README.md  readme.md  video_streaming_client.sdp  video_streaming_client_gst.sh
ai_doberBot/: CMakeLists.txt  config.json
ai_doberBot/detector/: .object_detection.cpp.swp  .opencv_gstreamer.cpp.swp  README.md  doberBot.cpp  doberBot_sdk.cpp  opencv_gstreamer  opencv_gstreamer.cpp  test_sample.cpp
ai_doberBot/modules_facenet/: baseEngine.h  common.cpp  common.h  faceNet.cpp  faceNet.h  main.cpp.save  onet_rt.cpp  pnet_rt.cpp  rnet_rt.cpp  videoStreamer.cpp
ai_doberBot/modules_yolo/: calibrator.cpp  class_detector.h  class_yolo_detector.hpp  ds_image.cpp  trt_utils.cpp  trt_utils.h  yolo.cpp  yolo.h  yoloplugin_lib.cpp
ai_doberBot/utils/: client_socket.cpp  client_socket.hpp  face_biometrices.cpp  face_biometrices.hpp  json.hpp
